--- a/index.html
+++ b/index.html
@@ -2,37 +2,65 @@
 <html>
 <head>
     <title>For Someone Special ❤️</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body {
-            background: linear-gradient(to right, pink, lightcoral);
+        /* Full-screen, centered content */
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             text-align: center;
-            font-family: Arial;
-            padding-top: 100px;
+            background: linear-gradient(to right, pink, lightcoral);
+            font-family: Arial, sans-serif;
         }
-        h1 { color: white; font-size: 50px; }
+
+        /* Main greeting */
+        h1 {
+            color: white;
+            font-size: 10vw;   /* very large on mobile */
+            line-height: 1.1;
+            margin: 0;
+        }
+
+        /* Paragraph text */
+        p {
+            font-size: 6vw;    /* scales with screen, readable for long text */
+            color: white;
+            line-height: 1.4;
+            margin: 2vw 5vw;   /* vertical and horizontal spacing */
+        }
+
+        /* Button styling */
         a {
             display: inline-block;
-            margin-top: 300px;
-            padding: 100px 200px;
+            margin-top: 5vw;
+            padding: 3vw 5vw;
             background: white;
             color: red;
             text-decoration: none;
-            border-radius: 100px;
+            border-radius: 10px;
             font-weight: bold;
+            font-size: 5vw;
         }
     </style>
 </head>
 <body>
     <h1>Hi Beautiful 😊</h1>
-    <h1><p>This is something I made just for you From the bottom of my heart, I just want to say how much I love and respect you. I feel incredibly lucky to have you in my life. Having someone like you with your heart, your mind, your creativity, and your beautiful soul is something I never take for granted.
-Every day I appreciate you more, not just for how amazing you are on the outside, but for the person you are within. You inspire me, you mean so much to me, and knowing you are part of my life is a blessing I thank God for.
-I promise to always work on being better better in how I love, how I communicate, and how I show up for you. Your happiness matters to me, and I will always try my best to protect your heart and bring peace into your life, not pain.
-The same way you once asked me to never give up on you is the same way I hope you never give up on me. What we have is worth effort, patience, and growth, and I am willing to put that in.
-I started making this on the 20th January just for you my Queen..</p></h1>
+    <p>
+        This is something I made just for you. From the bottom of my heart, I just want to say how much I love and respect you. I feel incredibly lucky to have you in my life. Having someone like you with your heart, your mind, your creativity, and your beautiful soul is something I never take for granted.<br><br>
+        Every day I appreciate you more, not just for how amazing you are on the outside, but for the person you are within. You inspire me, you mean so much to me, and knowing you are part of my life is a blessing I thank God for.<br><br>
+        I promise to always work on being better in how I love, how I communicate, and how I show up for you. Your happiness matters to me, and I will always try my best to protect your heart and bring peace into your life, not pain.<br><br>
+        The same way you once asked me to never give up on you is the same way I hope you never give up on me. What we have is worth effort, patience, and growth, and I am willing to put that in.<br><br>
+        I started making this on the 20th January just for you my Queen.
+    </p>
     <a href="story.html">Click to Begin ❤️</a>
 </body>
-
 </html>
+
 
 
 
