--- a/index.html
+++ b/index.html
@@ -4,37 +4,28 @@
     <title>For Someone Special ❤️</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /* Full-screen, centered content */
-        html, body {
-            height: 100%;
+        /* Full-page styling, start from top now */
+        body {
             margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            text-align: center;
+            padding: 5vw;             /* space from edges */
+            text-align: center;       /* horizontal centering */
             background: linear-gradient(to right, pink, lightcoral);
             font-family: Arial, sans-serif;
+            line-height: 1.4;
         }
 
-        /* Main greeting */
         h1 {
             color: white;
-            font-size: 10vw;   /* very large on mobile */
-            line-height: 1.1;
-            margin: 0;
+            font-size: 10vw;
+            margin: 0 0 3vw 0;        /* space below heading */
         }
 
-        /* Paragraph text */
         p {
-            font-size: 6vw;    /* scales with screen, readable for long text */
+            font-size: 6vw;
             color: white;
-            line-height: 1.4;
-            margin: 2vw 5vw;   /* vertical and horizontal spacing */
+            margin: 2vw 0;
         }
 
-        /* Button styling */
         a {
             display: inline-block;
             margin-top: 5vw;
@@ -60,6 +51,7 @@
     <a href="story.html">Click to Begin ❤️</a>
 </body>
 </html>
+
 
 
 
