--- a/index.html
+++ b/index.html
@@ -1,56 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>For Someone Special ❤️</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>For You 💕</title>
+
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
     <style>
-        /* Full-page styling, start from top now */
         body {
             margin: 0;
-            padding: 5vw;             /* space from edges */
-            text-align: center;       /* horizontal centering */
-            background: linear-gradient(to right, pink, lightcoral);
-            font-family: Arial, sans-serif;
-            line-height: 1.4;
+            padding: 0;
+            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            font-family: 'Poppins', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
         }
 
-        h1 {
-            color: white;
-            font-size: 10vw;
-            margin: 0 0 3vw 0;        /* space below heading */
+        .container {
+            background: rgba(255, 255, 255, 0.9);
+            padding: 40px 25px;
+            border-radius: 20px;
+            max-width: 700px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
         }
 
         p {
-            font-size: 6vw;
-            color: white;
-            margin: 2vw 0;
+            font-size: 18px;
+            line-height: 1.8;
+            color: #333;
+            white-space: pre-line;
         }
 
-        a {
+        .hearts {
+            font-size: 22px;
+            margin: 10px 0 20px 0;
+        }
+
+        .next-btn {
             display: inline-block;
-            margin-top: 5vw;
-            padding: 3vw 5vw;
-            background: white;
-            color: red;
+            margin-top: 25px;
+            padding: 12px 25px;
+            background: #ff6f91;
+            color: white;
+            font-weight: 600;
+            border: none;
+            border-radius: 12px;
             text-decoration: none;
-            border-radius: 10px;
-            font-weight: bold;
-            font-size: 5vw;
+            transition: 0.3s;
+            cursor: pointer;
+        }
+
+        .next-btn:hover {
+            background: #ff3f6b;
+        }
+
+        @media (max-width: 600px) {
+            p {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Hi Beautiful 😊</h1>
-    <p>
-        This is something I made just for you. From the bottom of my heart, I just want to say how much I love and respect you. I feel incredibly lucky to have you in my life. Having someone like you with your heart, your mind, your creativity, and your beautiful soul is something I never take for granted.<br><br>
-        Every day I appreciate you more, not just for how amazing you are on the outside, but for the person you are within. You inspire me, you mean so much to me, and knowing you are part of my life is a blessing I thank God for.<br><br>
-        I promise to always work on being better in how I love, how I communicate, and how I show up for you. Your happiness matters to me, and I will always try my best to protect your heart and bring peace into your life, not pain.<br><br>
-        The same way you once asked me to never give up on you is the same way I hope you never give up on me. What we have is worth effort, patience, and growth, and I am willing to put that in.<br><br>
-        I started making this on the 20th January just for you my Queen.
-    </p>
-    <a href="story.html">Click to Begin ❤️</a>
+
+    <div class="container">
+        <div class="hearts">💕 💕 💕</div>
+
+        <p>
+Hey I know I fucked up dearly. It is regret I carry with me every day that made me do things I'm not proud of, but I took it as a learning experience and a road pavement that I need to walk on. A path free from ego, pettiness, and emotional control. I've grown and moved past that in terms of how I do and see things. For loving someone means always standing by them no matter the situation, for love knows no bounds. My love knows no bounds. I didn't care how dumb I look chasing you, for it is you I want to be better for and create peace, love, and harmony — no one else. I was stupid for hurting you. You mean the world to me and I don't want to redo the same mistakes again but move past them and rebuild what we once had. In all the correct ways.
+        </p>
+
+        <div class="hearts">💕 💕 💕</div>
+
+        <!-- Next Page Button -->
+        <a href="next.html" class="next-btn">Next Page ➡️</a>
+    </div>
+
 </body>
 </html>
+
 
 
 
