--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         <p>
 Hey I know I fucked up dearly. It is regret I carry with me every day that made me do things I'm not proud of, but I took it as a learning experience and a road pavement that I need to walk on. A path free from ego, pettiness, and emotional control. I've grown and moved past that in terms of how I do and see things. For loving someone means always standing by them no matter the situation, for love knows no bounds. My love knows no bounds. I didn't care how dumb I look chasing you, for it is you I want to be better for and create peace, love, and harmony — no one else. I was stupid for hurting you. You mean the world to me and I don't want to redo the same mistakes again but move past them and rebuild what we once had. In all the correct ways.
         </p>
+             <div class="hearts">💕 💕 💕</div>
 
-        <div class="hearts">💕 💕 💕</div>
-
-        <!-- Next Page Button -->
-        <a href="next.html" class="next-btn">Next Page ➡️</a>
+        <!-- Next Page Button linking to story.html -->
+        <a href="story.html" class="next-btn">Next Page ➡️</a>
     </div>
 
 </body>
 </html>
+
 
 
 
