--- a/story.html
+++ b/story.html
@@ -1,21 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Our Story</title>
-<style>
-body { font-family: Arial; text-align:center; background:#ffe6f0; padding:50px; }
-a { display:block; margin-top:20px; color:red; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Story 💕</title>
+
+    <!-- Same Font as Before -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            font-family: 'Poppins', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            text-align: center;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.92);
+            padding: 40px 25px;
+            border-radius: 20px;
+            max-width: 700px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.8;
+            color: #333;
+            white-space: pre-line;
+        }
+
+        .hearts {
+            font-size: 22px;
+            margin: 10px 0 20px 0;
+        }
+
+        .next-btn {
+            display: inline-block;
+            margin-top: 25px;
+            padding: 12px 25px;
+            background: #ff6f91;
+            color: white;
+            font-weight: 600;
+            border-radius: 12px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .next-btn:hover {
+            background: #ff3f6b;
+        }
+
+        @media (max-width: 600px) {
+            p {
+                font-size: 16px;
+            }
+        }
+    </style>
 </head>
 <body>
-<h1>How It Started 💫</h1>
-<p>From the first time we talked, something felt different l knew you were my everything since the day l met you
-You saved and cared for me like no other so l had to learn to do the same so l did
-Being with you was the easiest and best thing one could ask for
-l love loving you eachday of my life. l know lm stupid sometimes and become a dickhead but l love you and only you with everything in me
-.</p>
-<p>You brought peace, laughter, and light into my life.</p>
 
-<a href="reasons.html">Next →</a>
+    <div class="container">
+        <div class="hearts">💕 💕 💕</div>
+
+        <p>
+I know a lot has changed, and it's pain and realization I feel. I understand and respect all you said. I want to do it differently and actually do right right now. You are my sole light in this dark and hopeless world. You were there for me when no one else was, believing in my dreams when I myself didn't believe. I made the mistake of thinking big gestures made things okay, but the small things matter more — making you feel trusted and seen at all times.
+
+I want you all to myself and to actually create an environment where your emotions and peace are protected and respected. I just wish to do it together, rebuilding all we create. Redo all the exciting things like going on dates, the surprises, the late-night calls, the TikToks and reel hours, and all the other things — for I want that with you and only you. I simply hope and pray you grow back into that too.
+        </p>
+
+        <div class="hearts">💕 💕 💕</div>
+
+        <!-- Next Page Button -->
+        <a href="reasons.html" class="next-btn">Next Page ➡️</a>
+    </div>
+
 </body>
 </html>
