--- a/reasons.html
+++ b/reasons.html
@@ -1,117 +1,329 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Why You</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Why I Love You 💕</title>
+
+<!-- Google Font for consistency -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 <style>
-body { text-align:center; font-family:Arial; background:#ffd6e8; padding:50px; }
-li { margin:10px; font-size:18px; }
-a { color:red; display:block; margin-top:20px; }
+    body {
+        font-family: 'Poppins', sans-serif;
+        background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+        margin: 0;
+        padding: 50px;
+        text-align: center;
+    }
+
+    h1 {
+        font-weight: 600;
+        font-size: 32px;
+        margin-bottom: 30px;
+        color: #d94f8b;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+        max-width: 800px;
+        margin: 0 auto;
+        column-count: 2;
+        column-gap: 40px;
+        text-align: left;
+    }
+
+    li {
+        margin: 8px 0;
+        font-size: 16px;
+        line-height: 1.6;
+        color: #333;
+    }
+
+    .next-btn {
+        display: inline-block;
+        margin-top: 40px;
+        padding: 14px 28px;
+        background: #ff6f91;
+        color: white;
+        font-weight: 600;
+        border-radius: 12px;
+        text-decoration: none;
+        transition: 0.3s;
+    }
+
+    .next-btn:hover {
+        background: #ff3f6b;
+    }
+
+    @media(max-width: 700px) {
+        ul {
+            column-count: 1;
+        }
+        li {
+            font-size: 15px;
+        }
+    }
 </style>
 </head>
 <body>
-<h1>Reasons I Adore You ❤️</h1>
-<ul style="list-style:none;">
-<li>Your beautiful smile</li>
-<li>Your expressive eyes</li>
+
+<h1>Reasons I Adore You 💕</h1>
+
+<ul>
+<li>Your soft hair that I love to touch</li>
+<li>Your sparkling eyes</li>
+<li>Your gentle and warm hands</li>
+<li>Your unique birthmarks</li>
+<li>Your radiant smile</li>
 <li>Your soft laugh</li>
-<li>Your natural beauty</li>
-<li>The way your face lights up when you’re happy</li>
-<li>Your sense of style</li>
+<li>Your natural beauty without trying</li>
+<li>Your face lighting up when happy</li>
+<li>Your expressive eyebrows</li>
+<li>Your lips’ perfect curve</li>
+<li>Your elegant posture</li>
 <li>Your calm voice</li>
-<li>Your gentle facial expressions</li>
-<li>Your cute reactions</li>
-<li>Your graceful movements</li>
-<li>Your confidence when you’re comfortable</li>
-<li>Your quiet elegance</li>
-<li>Your creativity</li>
-<li>Your talent for drawing</li>
-<li>The way you bring ideas to life on paper</li>
-<li>Your artistic mind</li>
-<li>Your imagination</li>
-<li>Your eye for detail</li>
-<li>The patience you have when creating art</li>
-<li>Your unique way of seeing the world</li>
-<li>Your originality</li>
-<li>Your ability to turn simple things into beauty</li>
-<li>Your thoughtful mind</li>
-<li>Your emotional depth</li>
-<li>Your kindness</li>
-<li>Your soft heart</li>
-<li>Your caring nature</li>
+<li>Your deep listening skills</li>
+<li>Your artistic personality</li>
+<li>Your ability to create beautiful things</li>
+<li>Your imagination and creativity</li>
+<li>Your artistic hands</li>
+<li>Your effortless cool style</li>
+<li>Your stylish hair and outfits</li>
+<li>Your love for small adventures and quests</li>
+<li>Your readiness to try new things</li>
+<li>Your passion for art</li>
+<li>Your care for your friends</li>
 <li>Your empathy for others</li>
 <li>Your emotional intelligence</li>
-<li>Your maturity</li>
-<li>Your quiet strength</li>
-<li>Your resilience</li>
-<li>Your ability to stay strong inside</li>
-<li>Your independence</li>
-<li>Your peaceful energy</li>
-<li>Your calm personality</li>
-<li>Your sincerity</li>
-<li>Your honesty</li>
+<li>Your patience when creating art</li>
+<li>Your ability to inspire me</li>
+<li>Your eye for turning ordinary things into beauty</li>
+<li>Your unique perspective on life</li>
+<li>Your elegance without trying</li>
+<li>Your balanced energy</li>
+<li>Your quiet confidence</li>
+<li>Your calmness under pressure</li>
+<li>Your kindness to everyone</li>
+<li>Your soft-spoken words</li>
+<li>Your thoughtful decisions</li>
+<li>Your caring heart</li>
+<li>Your natural grace</li>
+<li>Your love for life’s little joys</li>
+<li>Your resilience through challenges</li>
+<li>Your ability to stay true to yourself</li>
+<li>Your curiosity about the world</li>
+<li>Your sense of humor</li>
+<li>Your adventurous spirit</li>
+<li>Your playful nature</li>
+<li>Your subtle elegance</li>
+<li>Your emotional depth</li>
 <li>Your loyalty</li>
 <li>Your pure intentions</li>
-<li>Your gentle spirit</li>
-<li>Your warm heart</li>
-<li>Your respectful nature</li>
-<li>Your humility</li>
-<li>Your intelligence</li>
-<li>Your deep thinking</li>
-<li>Your focus when you care about something</li>
-<li>Your determination</li>
-<li>Your self-awareness</li>
-<li>Your sense of responsibility</li>
-<li>Your emotional sensitivity</li>
-<li>Your ability to understand feelings</li>
-<li>Your quiet confidence</li>
-<li>Your softness</li>
-<li>Your elegance</li>
+<li>Your soft laughter</li>
+<li>Your calming presence</li>
+<li>Your ability to express yourself through art</li>
+<li>Your creative mind</li>
+<li>Your love for beauty</li>
+<li>Your celebration of small victories</li>
+<li>Your quiet strength</li>
 <li>Your natural charm</li>
-<li>Your peaceful presence</li>
 <li>Your comforting aura</li>
 <li>Your ability to stay composed</li>
-<li>Your thoughtful decisions</li>
-<li>Your good heart</li>
-<li>Your natural kindness to people</li>
-<li>Your beautiful soul</li>
-<li>Your depth as a person</li>
-<li>Your genuine personality</li>
-<li>Your authenticity</li>
-<li>Your ability to care deeply</li>
-<li>Your protective nature over your feelings</li>
-<li>Your careful way of loving</li>
-<li>Your emotional honesty</li>
-<li>Your soft-spoken nature</li>
-<li>Your meaningful silence</li>
-<li>Your artistic sensitivity</li>
-<li>Your love for beauty</li>
-<li>Your ability to express through art</li>
-<li>Your creativity without limits</li>
-<li>Your unique perspective</li>
-<li>Your ability to inspire</li>
-<li>Your natural grace</li>
-<li>Your balanced energy</li>
-<li>Your ability to make things feel peaceful</li>
-<li>Your quiet wisdom</li>
-<li>Your inner beauty</li>
-<li>Your outer beauty</li>
-<li>Your natural glow</li>
-<li>Your elegance without trying</li>
-<li>Your calm reactions</li>
-<li>Your ability to reflect before acting</li>
-<li>Your softness even when strong</li>
-<li>Your respectful boundaries</li>
+<li>Your thoughtfulness in relationships</li>
 <li>Your self-respect</li>
-<li>Your ability to stay true to yourself</li>
-<li>Your beautiful mind</li>
-<li>Your caring eyes</li>
-<li>Your artistic hands</li>
-<li>Your creative soul</li>
+<li>Your respectful boundaries</li>
+<li>Your emotional honesty</li>
+<li>Your meaningful silences</li>
+<li>Your artistic sensitivity</li>
+<li>Your love for colors</li>
+<li>Your attention to detail</li>
+<li>Your graceful movements</li>
+<li>Your way of making people smile</li>
+<li>Your ability to make me feel understood</li>
+<li>Your calming energy</li>
+<li>Your soft heart even when strong</li>
+<li>Your ability to forgive easily</li>
+<li>Your gentle soul</li>
+<li>Your warmth and affection</li>
+<li>Your authenticity</li>
+<li>Your courage to be yourself</li>
+<li>Your ability to make small moments magical</li>
+<li>Your unique sense of style</li>
+<li>Your organized space</li>
+<li>Your ability to make people feel special</li>
+<li>Your limitless creativity</li>
+<li>Your playful eyes</li>
+<li>Your gentle hugs</li>
+<li>Your curiosity and wonder</li>
+<li>Your honesty and openness</li>
+<li>Your independence and strength</li>
+<li>Your calming voice on hard days</li>
+<li>Your excitement for little adventures</li>
+<li>Your celebration of life</li>
+<li>Your natural beauty inside and out</li>
+<li>Your delicate hands</li>
+<li>Your subtle gestures of love</li>
+<li>Your graceful smile</li>
+<li>Your quiet laughter</li>
+<li>Your determination</li>
+<li>Your patience with yourself and others</li>
+<li>Your big dreams</li>
+<li>Your artistic eye</li>
+<li>Your love for music</li>
+<li>Your fun personality</li>
+<li>Your peaceful energy</li>
+<li>Your inner beauty that shines</li>
+<li>Your thoughtful notes</li>
+<li>Your creativity in solving problems</li>
+<li>Your willingness to learn</li>
+<li>Your adventurous fashion choices</li>
+<li>Your thoughtful gifts</li>
+<li>Your empathy and care</li>
+<li>Your eye for beauty in small things</li>
+<li>Your natural elegance</li>
+<li>Your expressive gestures</li>
+<li>Your positivity</li>
+<li>Your love for cozy moments</li>
+<li>Your deep conversations</li>
+<li>Your playful humor</li>
+<li>Your gentle teasing</li>
+<li>Your quiet support</li>
+<li>Your ability to make me laugh</li>
+<li>Your fascination with art and creation</li>
+<li>Your patience in learning new things</li>
+<li>Your love for nature</li>
+<li>Your sense of wonder</li>
+<li>Your adventurous spirit in trying new foods</li>
+<li>Your respect for others</li>
+<li>Your humility</li>
+<li>Your elegant handwriting</li>
+<li>Your curiosity about life</li>
+<li>Your excitement for small wins</li>
+<li>Your intelligence and focus</li>
+<li>Your deep thinking</li>
+<li>Your empathy in tough situations</li>
+<li>Your graceful reactions</li>
+<li>Your courage to express feelings</li>
+<li>Your ability to stay calm in chaos</li>
+<li>Your inspiring personality</li>
+<li>Your artistic imagination</li>
+<li>Your ability to motivate others</li>
+<li>Your soft-spoken words that matter</li>
+<li>Your passion for creativity</li>
+<li>Your dedication to what you love</li>
+<li>Your radiant energy</li>
+<li>Your unique smile that brightens days</li>
+<li>Your gentle encouragement</li>
+<li>Your playful teasing in love</li>
+<li>Your ability to make everyday moments fun</li>
+<li>Your subtle compliments</li>
+<li>Your natural ability to connect</li>
+<li>Your graceful way of moving</li>
+<li>Your love for storytelling</li>
+<li>Your imaginative thinking</li>
+<li>Your resilience in tough times</li>
+<li>Your ability to comfort others</li>
+<li>Your thoughtful perspective</li>
+<li>Your emotional depth</li>
+<li>Your soft-spoken wisdom</li>
+<li>Your love for art and beauty</li>
+<li>Your patience with mistakes</li>
+<li>Your quiet confidence that shines</li>
+<li>Your heartfelt gestures</li>
+<li>Your calm presence in chaos</li>
+<li>Your gentle approach to life</li>
+<li>Your understanding of feelings</li>
+<li>Your soft laughter that heals</li>
+<li>Your creative solutions to problems</li>
+<li>Your graceful demeanor</li>
+<li>Your appreciation for the little things</li>
+<li>Your supportive nature</li>
+<li>Your nurturing personality</li>
+<li>Your balance between fun and serious</li>
+<li>Your ability to make everyone feel valued</li>
+<li>Your natural poise</li>
+<li>Your love for surprises</li>
+<li>Your ability to inspire calm</li>
+<li>Your joyful energy</li>
+<li>Your thoughtful reflections</li>
+<li>Your warm heart</li>
+<li>Your radiant confidence</li>
+<li>Your love for meaningful conversations</li>
+<li>Your artistic creativity</li>
+<li>Your playful imagination</li>
+<li>Your gentle understanding</li>
+<li>Your passion for life</li>
+<li>Your radiant personality</li>
+<li>Your love for challenges</li>
+<li>Your subtle elegance in every gesture</li>
+<li>Your beauty in simplicity</li>
+<li>Your ability to stay composed under pressure</li>
+<li>Your love for exploration</li>
+<li>Your graceful spirit</li>
+<li>Your soft expressions that show love</li>
+<li>Your thoughtful attention to detail</li>
+<li>Your caring nature towards me</li>
+<li>Your natural glow inside and out</li>
+<li>Your way of making ordinary moments special</li>
+<li>Your artistic soul</li>
+<li>Your warm embraces</li>
+<li>Your calm patience</li>
+<li>Your love for laughter and fun</li>
+<li>Your beautiful, caring heart</li>
+<li>Your soft demeanor</li>
+<li>Your thoughtful words of encouragement</li>
+<li>Your readiness to help</li>
+<li>Your gentle confidence</li>
+<li>Your love for quiet moments together</li>
+<li>Your creative mind that inspires me</li>
+<li>Your deep appreciation for life</li>
+<li>Your ability to see the best in people</li>
+<li>Your radiant inner light</li>
+<li>Your thoughtful gestures of love</li>
+<li>Your elegant charm</li>
+<li>Your peaceful nature</li>
+<li>Your natural kindness</li>
+<li>Your love for art and beauty in the world</li>
+<li>Your ability to make life feel magical</li>
+<li>Your joyful soul</li>
+<li>Your playful personality</li>
+<li>Your gentle humor</li>
+<li>Your curiosity and zest for life</li>
 <li>Your beautiful existence</li>
-<li>Your rare personality</li>
-<li>Your special way of being you</li>
+<li>Your rare and unique personality</li>
+<li>Your ability to love deeply and sincerely</li>
+<li>Your graceful elegance</li>
+<li>Your calm and peaceful aura</li>
+<li>Your artistic creativity in everything you do</li>
+<li>Your warm, comforting smile</li>
+<li>Your ability to make me feel at home</li>
+<li>Your soft and caring hands</li>
+<li>Your thoughtful nature in love</li>
+<li>Your playful spirit that lifts moods</li>
+<li>Your love for meaningful connections</li>
+<li>Your beautiful soul that shines everywhere</li>
+<li>Your uniqueness in every way</li>
+<li>Your way of being purely yourself</li>
+<li>Your presence that makes everything better</li>
+<li>Your love for peace and harmony</li>
+<li>Your quiet wisdom and insight</li>
+<li>Your soft yet strong energy</li>
+<li>Your ability to protect your heart and mine</li>
+<li>Your magical way of loving fully</li>
+<li>Your joy in small moments</li>
+<li>Your graceful demeanor in everything</li>
+<li>Your rare and beautiful perspective</li>
+<li>Your love that feels endless</li>
+<li>Your ability to inspire me every day</li>
+<li>Your heart that loves purely</li>
+<li>Your gentle nature that comforts everyone</li>
+<li>Your radiant, artistic, loving soul</li>
+<li>Your beautiful way of simply being you</li>
 </ul>
 
-<a href="gallery.html">Next →</a>
+<a href="gallery.html" class="next-btn">Next →</a>
+
 </body>
-</html>
+  </html>
