--- a/gallery.html
+++ b/gallery.html
@@ -1,32 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Memories</title>
-<style>
-body { text-align:center; font-family:Arial; background:#ffe6f0; padding:1px; }
-img { width:200px; margin:1px; border-radius:1px; }
-a { display:block; margin-top:20px; color:red; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Memories 💕</title>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            margin: 0;
+            padding: 50px;
+            text-align: center;
+        }
+
+        .container {
+            background: rgba(255, 255, 255, 0.92);
+            padding: 40px 25px;
+            border-radius: 20px;
+            max-width: 700px;
+            margin: auto;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.8;
+            color: #333;
+            white-space: pre-line;
+        }
+
+        .hearts {
+            font-size: 22px;
+            margin: 10px 0 20px 0;
+        }
+
+        .next-btn {
+            display: inline-block;
+            margin-top: 25px;
+            padding: 12px 25px;
+            background: #ff6f91;
+            color: white;
+            font-weight: 600;
+            border-radius: 12px;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+
+        .next-btn:hover {
+            background: #ff3f6b;
+        }
+
+        @media(max-width: 700px){
+            p { font-size: 16px; }
+        }
+    </style>
 </head>
 <body>
-<h1>Our Moments 📸
-l hold all our moments close no matter how small they were
-from simply coming over to your house and sleeping together.
-To meeting your mum on the first day and how scared l was.
-To teaching you how to drive.
-To our first kiss
-To our new years kiss
-To showering together
-To cooking for you
-All the side quests we took
-And all the others l have failed to mention
-They give me strength to push through</h1>
 
-<img src="photo1.jpg">
-<img src="photo2.jpg">
+<div class="container">
+    <div class="hearts">💕 💕 💕</div>
 
-<a href="proposal.html">Final Page →</a>
+    <p>
+        From all the moments we’ve shared together, I hold them dearly. From teaching you how to drive, to our New Year's kiss, our first kiss, meeting your mom and being scared, to you meeting my mom, our first sleepover at both our houses, our first actual date together, the little adventures we went on, the days we’d cook together, the mornings we’d love each other, the nights we’d cuddle the whole night through, the movies we watched together, the showers we took together, the times we just looked into each other's eyes all day, sending TikToks in bed, and reels. From having our highlights about each other to creating a circle where all that was possible — and all the others I failed to mention. These are just part of a few things we shared that were good, that honestly give us hope that we can rebuild, and I want to do that with you. Create more and more and more memories.
+    </p>
+
+    <div class="hearts">💕 💕 💕</div>
+
+    <!-- Next Page Button linking to proposal.html -->
+    <a href="proposal.html" class="next-btn">Next Page ➡️</a>
+</div>
+
 </body>
-
 </html>
+
 
