--- a/proposal.html
+++ b/proposal.html
@@ -1,82 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>An Honest Heart</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Journey Together 💕</title>
     <style>
         body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+            margin: 0;
+            padding: 50px;
             text-align: center;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to bottom right, #ffe6f0, #ffd6e8);
-            padding: 60px 20px;
-            color: #333;
         }
 
-        h1 {
-            color: #cc0066;
-            font-size: 32px;
+        .container {
+            background: rgba(255, 255, 255, 0.92);
+            padding: 40px 25px;
+            border-radius: 20px;
+            max-width: 700px;
+            margin: auto;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
         }
 
         p {
-            max-width: 700px;
-            margin: 15px auto;
-            font-size: 18px;
-            line-height: 1.6;
+            font-size: 20px;
+            line-height: 1.8;
+            color: #333;
+            margin-bottom: 30px;
+            white-space: pre-line;
         }
 
-        .heart {
-            font-size: 40px;
-            margin: 20px 0;
-        }
-
-        a {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 10px 20px;
-            background-color: #ff4d88;
-            color: white;
-            text-decoration: none;
-            border-radius: 25px;
-            font-size: 16px;
-        }
-
-        a:hover {
-            background-color: #e6005c;
+        .hearts {
+            font-size: 22px;
+            margin: 10px 0 20px 0;
         }
     </style>
 </head>
 <body>
 
-    <h1>An Honest Heart 🤍</h1>
-
-    <div class="heart">💗</div>
-
-    <p>
-        Originally this last page was a proposal to ask you to be my valentine.
-        I made this so you could see my heart clearly, without emotions or misunderstandings getting in the way.
-    </p>
+<div class="container">
+    <div class="hearts">💕 💕 💕</div>
 
     <p>
-        I’ve thought about everything the mistakes, the fear, the moments we both struggled.  
-        I understand now that love isn’t just feelings… it’s patience, growth, and emotional safety too.
+        I know a lot has changed, and I honestly respect and understand that. I am ready to tackle whatever comes our way. I hope that you can see that my desire to work through all the hard times, all the hardships, and everything in between is genuine. I want this, I desire this, and I am ready to prove it to you. I want us, and I want to build a future together. I want to show you that I am committed to making this work, and I hope you want that too. Let's move forward together, embracing all the changes and challenges, and create a beautiful journey as a team.
     </p>
 
-    <p>
-        I’m not asking for everything to go back to how it was.  
-        I’m hoping, if your heart ever feels ready, we could build something healthier, calmer, and stronger than before step by step.
-    </p>
-
-    <p>
-         I respect your pace, your healing, and your feelings matter.
-    </p>
-
-    <p>
-        I just want you to know this: my feelings are genuine, my intentions are better,  
-        and my heart is still open to you without pressure, without force, just honesty.
-    </p>
-
-    <div class="heart">💗</div>
-
-    <a href="index.html">Back to Start</a>
+    <div class="hearts">💕 💕 💕</div>
+</div>
 
 </body>
 </html>
